# agriculture_robot

./: README.md  object_detection_project.ipynb
agriculture_robot/: CMakeLists.txt  Readme.md  package.xml
agriculture_robot/config/: control.yaml
agriculture_robot/launch/: display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
agriculture_robot/meshes/: base_link.STL  elbow_link.STL  gripper_link.STL  shoulder_lift_link.STL  shoulder_pan_link.STL  wrist_1_link.STL  wrist_2_link.STL  wrist_3_link.STL
agriculture_robot/rviz/: display_default.rviz
agriculture_robot/src/: FK_IK_test_script.py  live_data.csv  pick_and_place.py
agriculture_robot/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
agriculture_robot/urdf/: agriculture_robot.urdf.xacro
agriculture_robot/worlds/: agro_world.world
models/plant/: model.config
models/tomato/: model.config
warehouse_robot/: CMakeLists.txt  package.xml
warehouse_robot/launch/: display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py  ur10_upload.launch
warehouse_robot/solidworks/large_package/: model.config  model.sdf
warehouse_robot/solidworks/large_package/meshes/: large_package_link.STL
warehouse_robot/solidworks/medium_package/: model.config  model.sdf
warehouse_robot/solidworks/medium_package/meshes/: medium_package_link.STL
warehouse_robot/solidworks/platform/: model.config  model.sdf
warehouse_robot/solidworks/platform/meshes/: platform_link.STL
warehouse_robot/solidworks/small_package/: model.config  model.sdf
warehouse_robot/solidworks/small_package/meshes/: small_package_link.STL
warehouse_robot/src/: warehouse_publisher.py
warehouse_robot/urdf/: ur10.urdf.xacro  ur10_joint_limited_robot.urdf  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf.xacro
